k8s/manifest/product-service-container-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: product-service-container
  name: product-service-container
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: product-service-container
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/ecommerce-microservices-k8s-default: "true"
        io.kompose.service: product-service-container
    spec:
      containers:
        - env:
            - name: EUREKA_CLIENT_AVAILABILITYZONES_DEFAULT
              value: myzone
            - name: EUREKA_CLIENT_REGION
              value: default
            - name: EUREKA_CLIENT_SERVICEURL_DEFAULTZONE
              value: http://service-discoverycontainer:8761/eureka/
            - name: EUREKA_CLIENT_SERVICEURL_MYZONE
              value: http://service-discoverycontainer:8761/eureka
            - name: EUREKA_INSTANCE_HOSTNAME
              value: product-service-container
            - name: EUREKA_INSTANCE_PREFER_IP_ADDRESS
              value: "false"
            - name: SPRING_CONFIG_IMPORT
              value: optional:configserver:http://cloud-configcontainer:9296/
            - name: SPRING_PROFILES_ACTIVE
              value: dev
          image: selimhorri/product-service-ecommerce-boot:0.1.0
          name: product-service-container
          ports:
            - containerPort: 8500
              hostPort: 8500
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
