k8s/manifest/service-discovery-container-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: service-discovery-container
  name: service-discovery-container
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: service-discovery-container
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/ecommerce-microservices-k8s-default: "true"
        io.kompose.service: service-discovery-container
    spec:
      containers:
        - env:
            - name: SPRING_CONFIG_IMPORT
              value: optional:configserver:http://cloud-configcontainer:9296/
            - name: SPRING_PROFILES_ACTIVE
              value: dev
            - name: SPRING_ZIPKIN_BASE-URL
              value: http://zipkin:9411
          image: selimhorri/service-discovery-ecommerce-boot:0.1.0
          name: service-discovery-container
          ports:
            - containerPort: 8761
              hostPort: 8761
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
