k8s/manifest/proxy-client-container-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: proxy-client-container
  name: proxy-client-container
spec:
  type: ClusterIP
  ports:
    - name: "8900"
      port: 8900
      targetPort: 8900
  selector:
    io.kompose.service: proxy-client-container
status:
  loadBalancer: {}
