k8s/manifest/user-service-container-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: user-service-container
  name: user-service-container
spec:
  type: ClusterIP
  ports:
    - name: "8700"
      port: 8700
      targetPort: 8700
  selector:
    io.kompose.service: user-service-container
status:
  loadBalancer: {}
